// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList selectors should return AccountList accounts 1`] = `
Object {
  "Account1": Object {
    "generate_report_status": "running",
    "id": 1,
    "upload_report_status": "running",
  },
  "Account2": Object {
    "generate_report_status": "failure",
    "id": 2,
    "upload_report_status": "unknown",
  },
  "Account3": Object {
    "generate_report_status": "running",
    "id": 3,
    "upload_report_status": "success",
  },
}
`;

exports[`AccountList selectors should return AccountList autoUploadEnabled 1`] = `true`;

exports[`AccountList selectors should return AccountList cloudToken 1`] = `true`;

exports[`AccountList selectors should return AccountList excludePackages 1`] = `false`;

exports[`AccountList selectors should return AccountList hostObfuscationEnabled 1`] = `true`;

exports[`AccountList selectors should return AccountList pollingProcessID 1`] = `0`;

exports[`AccountList selectors should return AccountsList 1`] = `
Object {
  "accounts": Object {
    "Account1": Object {
      "generate_report_status": "running",
      "id": 1,
      "upload_report_status": "running",
    },
    "Account2": Object {
      "generate_report_status": "failure",
      "id": 2,
      "upload_report_status": "unknown",
    },
    "Account3": Object {
      "generate_report_status": "running",
      "id": 3,
      "upload_report_status": "success",
    },
  },
  "autoUploadEnabled": true,
  "cloudToken": true,
  "excludePackages": false,
  "hostObfuscationEnabled": true,
  "pollingProcessID": 0,
}
`;
